--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,11 @@ dependencies:
   shared_preferences: ^0.5.6+1
   sqflite:  ^1.1.6
   connectivity: ^0.4.3+7
+  injectable_generator: ^0.3.0
+  build_runner: ^1.0.0
+  mockito: ^4.1.0
+  json_serializable: ^3.0.1
+  get_it: ^3.0.1
 
 dev_dependencies:
   flutter_test:
