--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,21 @@ dependencies:
   injectable_generator: ^0.3.0
   build_runner: ^1.0.0
   mockito: ^4.1.0
-  json_serializable: ^3.0.1
+  json_annotation: ^3.0.0
   get_it: ^3.0.1
+  source_gen: ^0.9.0
 
 dev_dependencies:
+  json_serializable: ^3.2.0
+  build_verify: ^1.1.0
+  build_web_compilers: '>=1.0.0 <3.0.0'
+  collection: ^1.14.0
+  dart_style: ^1.2.0
+  logging: ^0.11.3+1
+  pub_semver: ^1.4.0
+  source_gen_test: ^0.1.0
+  test: ^1.6.0
+  yaml: ^2.1.13
   flutter_test:
     sdk: flutter
 
